--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,10 +16,20 @@ spring:
     testOnReturn: false
     poolPreparedStatements: true
 #   配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
-    filters: stat,wall,log4j
+    filters: [stat,wall,log4j]
     maxPoolPreparedStatementPerConnectionSize: 20
     useGlobalDataSourceStat: true
     connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=500
+  redis:
+    database: 0
+    jedis:
+      pool:
+        max-active: 100
+        max-wait: -1
+        max-idle: 10
+        min-idle: 0
+    port: 6379
+    connect-timeout: 1000
   servlet:
     multipart:
       max-file-size: 10MB
@@ -55,6 +65,8 @@ spring:
   datasource:
     username: root
     password: 123456
+  redis:
+    host: 192.168.122.128
 server:
   port: 9999
 
@@ -65,5 +77,7 @@ spring:
   datasource:
     username: root
     password: WHZNewPass4!
+  redis:
+    host: localhost
 server:
   port: 443
