--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,3 @@
-
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/blog?autoReconnect=true&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&zeroDateTimeBehavior=convertToNull&useSSL=false
@@ -55,9 +54,15 @@ spring:
           protocol: smtp
   profiles:
     active: dev
+
+
 mybatis:
   type-aliases-package: com.whz.blog.entity
   mapper-locations: classpath:mybatis/*.xml
+#  configuration:  当对sql输出结果感到不解时，可以打开查看sql的具体执行情况
+#    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+
+
 
 ---
 spring:
@@ -66,7 +71,8 @@ spring:
     username: root
     password: 123456
   redis:
-    host: 192.168.122.128
+    host: localhost
+    port: 6380
 server:
   port: 9999
 
